compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Notifications/content/Models/INotification.cs.pp
namespace $rootnamespace$.Models
{
    public interface INotification
    {
        string Message { get; }
    }
}